--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -1484,19 +1484,19 @@ assembly of whole chromosomes
 ```{r, BGS-mutvar-params, include=F, eval=F, results=F, message=F, warning=F}
 
 N <- 10000
-r <- seq_log(from=1e-15, to=1e-2, length.out=200)
-ul <- seq_log(from=1e-9, to=1e-7, length.out=30)
-ur <- seq_log(from=1e-9, to=1e-7, length.out=30)
-s <- -seq_log(from=1e-5, to=1e-3, length.out=100)
+lookup_r <- seq_log(from=1e-15, to=1e-2, length.out=200)
+lookup_ul <- seq_log(from=1e-9, to=1e-7, length.out=30)
+lookup_ur <- seq_log(from=1e-9, to=1e-7, length.out=30)
+lookup_s <- -seq_log(from=1e-5, to=1e-3, length.out=100)
 
-params <- crossing(N, r, ul, ur, s)
+params <- crossing(N, lookup_r, lookup_ul, lookup_ur, lookup_s)
 params$scenario <- 1:nrow(params)
 n_models <- nrow(params)
 
-write.table(as.data.frame(r), "selection/single-pop/landscapes/r.csv", quote=F, row.names=F, col.names=F)
-write.table(as.data.frame(ul), "selection/single-pop/landscapes/ul.csv", quote=F, row.names=F, col.names=F)
-write.table(as.data.frame(ur), "selection/single-pop/landscapes/ur.csv", quote=F, row.names=F, col.names=F)
-write.table(as.data.frame(s), "selection/single-pop/landscapes/s.csv", quote=F, row.names=F, col.names=F)
+write.table(as.data.frame(lookup_r), "selection/single-pop/landscapes/r.csv", quote=F, row.names=F, col.names=F)
+write.table(as.data.frame(lookup_ul), "selection/single-pop/landscapes/ul.csv", quote=F, row.names=F, col.names=F)
+write.table(as.data.frame(lookup_ur), "selection/single-pop/landscapes/ur.csv", quote=F, row.names=F, col.names=F)
+write.table(as.data.frame(lookup_s), "selection/single-pop/landscapes/s.csv", quote=F, row.names=F, col.names=F)
 
 write.csv(params, "selection/single-pop/landscapes/params.csv", quote=F, row.names=F)
 
@@ -1691,15 +1691,6 @@ for(i in 1:n_models) {
 
   cat(paste("Building chromosome(s) for model ", i, "...\n", sep=""))
   
-  N <- models$N[i]
-  
-  # 
-  #
-  # TODO: make all spans multiples of 100 or 1000?
-  #
-  #
-  
-  
   csl <- rgeom(n=models$num_constrained[i], prob=1/models$avg_constrained_lengths[i])
   sum_csl <- sum(csl)
   
@@ -1707,6 +1698,7 @@ for(i in 1:n_models) {
   sum_ncsl <- sum(ncsl)
   
   L <- sum_csl + sum_ncsl
+  N <- models$N[i]
   
   rec_spans <- rgeom(n=ceiling(L/models$avg_rec_spans[i]), prob=1/models$avg_rec_spans[i])
   while(sum(rec_spans) < L) {
@@ -1735,16 +1727,16 @@ for(i in 1:n_models) {
   names(intervals) <- c("chr", "start", "end")
   intervals$s <- constraints
   intervals_gr <- makeGRangesFromDataFrame(intervals, keep.extra.columns=T)
+  
   # for convenience when traversing the chr
-  selected_intervals <- filter(intervals, s < 0)
+  smap <- filter(intervals, s < 0)
   neutral_intervals <- filter(intervals, s == 0)
+  
   #
   #
   # eg 50 kb landscapes
   #
   #
-  
-  # TODO bin DFE landscape as well
   
   bins_50kb <- rep(5e+4, floor(L / 5e+4))
   bins_50kb <- bind_cols(chr="chr1", dplyr::lag(cumsum(bins_50kb), n=1, default=0), dplyr::lag(cumsum(bins_50kb), n=0, default=0))
@@ -1777,43 +1769,96 @@ for(i in 1:n_models) {
   mut_50kb <- tmpm %>% group_by(bins_50kb) %>% mutate(avg_mut=weighted.mean(u, end-start))
   mut_50kb <- mut_50kb %>% distinct(bins_50kb, .keep_all=T)
   
-  maps_50kb <- bind_cols(bins_50kb, rec_50kb["avg_rec"], mut_50kb["avg_mut"])
+  # binning DFE
+  dfe_gr <- makeGRangesFromDataFrame(intervals, keep.extra.columns=T)
+  hits <- findOverlaps(query=gr_50kb, subject=dfe_gr) 
+  hit_list <- as.data.frame(hits)
+  names(hit_list) <- c("bins_50kb", "dfe_bins")
+  intervals$dfe_bins <- 1:nrow(intervals)
+  tmpd <- merge(intervals, hit_list)
+  dfe_50kb <- tmpd %>% group_by(bins_50kb) %>% mutate(avg_s=weighted.mean(s, end-start))
+  dfe_50kb <- dfe_50kb %>% distinct(bins_50kb, .keep_all=T)
   
-  neu_pos <- numeric(floor(sum_ncsl/1e+3))
-  hr <- numeric(floor(sum_ncsl/1e+3))
+  maps_50kb <- bind_cols(bins_50kb, rec_50kb["avg_rec"], mut_50kb["avg_mut"], dfe_50kb["avg_s"])
+  
+  neu_pos <- numeric(floor(sum_ncsl/1e+2))
+  hr_list <- numeric(floor(sum_ncsl/1e+2))
 
-  pos <- 1 # focal position in chr ---> TODO start at zero?
+  c <- 1 # indexer for containers neu_pos and hr_list
+  pos <- 0 # focal position in chr 
+  
   for(j in 1:nrow(neutral_intervals)) { 
     
     neu_span <- neutral_intervals$end[j] - neutral_intervals$start[j]
     
-    # we sample one neutral site every 1 kp in non-constrained segments
-    for(k in 1:ceiling(neu_span/1e+3)) { 
+    # we sample one neutral site every 100 bp in non-constrained segments
+    for(k in 1:floor(neu_span/1e+2)) { 
       
       focal_ur <- mmap[as.data.frame(findOverlaps(query=mut_gr, subject=makeGRangesFromDataFrame(data.frame(chr="chr1", start=pos, end=pos))))["queryHits"][1,],]["u"]
-      pi0 <- 4 * N * as.numeric(focal_ur)
-      one_minus_f <- 1
+      pi0 <- 2 * N * as.numeric(focal_ur)
+      B <- 1 
       
-      rem_left <- pos - neutral_intervals$start[j]
-      rem_right <- neutral_intervals$end[j] - pos
+      for(l in 1:nrow(smap)) { # for every constrained locus
       
-      for(l in 1:nrow(selected_intervals)) { # for every constrained locus
-      
-        s <- selected_intervals$s[l]
+        focal_s <- smap$s[l]
+        focal_ul <- mmap[as.data.frame(findOverlaps(query=mut_gr, subject=makeGRangesFromDataFrame(data.frame(chr="chr1", start=smap$start[l], end=smap$end[l]))))["queryHits"][1,],]["u"]
         
-        focal_ul <- mmap[as.data.frame(findOverlaps(query=mut_gr, subject=makeGRangesFromDataFrame(data.frame(chr="chr1", start=selected_intervals$start[l],  end=selected_intervals$end[l]))))["queryHits"][1,],]["u"]
-        
-        total_r <- # TODO
+        total_r <- 0
+        if(pos < smap$start[l]) { # if focal neutral is to the left of focal constrained
           
-        hr <- # get from lookup table ~ r, s, ul, ur
-        one_minus_f <- one_minus_f * (hr / pi0) ^ csl[l]
+          tmpr <- rmap
+          tmpr$start[1] <- pos # to start rec integration at pos
+          tmpr <- filter(tmpr, start >= pos, start < smap$start[l])
+          
+          s_r_intersect <- intersect(makeGRangesFromDataFrame(tmpr, keep.extra.columns=T), makeGRangesFromDataFrame(smap[1:l,], keep.extra.columns=T))
+          sliced_range <- as.data.frame(ranges(s_r_intersect)) 
+          tmpr$end[nrow(tmpr)] <- sliced_range$start[nrow(sliced_range)]  # to end rec integration at the start of (non-recombining) gene
+          
+          tmpr <- tmpr %>% mutate(total_r=(weighted.mean(r, end-start) * (tmpr$end[nrow(tmpr)] - tmpr$start[1]))) # weighted sum
+          total_r <- tmpr$total_r[1]
+        }
+        else {
+          
+          tmpr <- rmap
+          tmpr <- filter(tmpr, start <= pos, end > smap$start[l])
+          
+          tmpr$end[nrow(tmpr)] <- pos # to start rec integration at pos
+          tmpr$start[1] <- smap$start[l] # to end rec integration at the start of (non-recombining) gene
+          
+          tmpr <- tmpr %>% mutate(total_r=(weighted.mean(r, end-start) * (tmpr$end[nrow(tmpr)] - tmpr$start[1]))) # weighted sum
+          total_r <- tmpr$total_r[1]
+        }
+
+        if(total_r < 1e-2) {
+          
+          # searching lookup table for closest match 
+          closest_r <- lookup_r[which.min(abs(lookup_r - total_r))]
+          closest_ul <- lookup_ul[which.min(abs(lookup_ul - focal_ul))]
+          closest_ur <- lookup_ur[which.min(abs(lookup_ur - focal_ur))]
+          closest_s <- lookup_s[which.min(abs(lookup_s - focal_s))]
+          
+          entry <- filter(lookup_tbl, r==closest_r, s==closest_s, ul==closest_ul, ur==closest_ur)
+          B <- B * entry$Hr / entry$pi0
+          
+          # TODO implement interpolation
+          #hr <- filter(lookup_tbl, r==closest_r, s==closest_s, ul==closest_ul, ur==closest_ur)$Hr
+          #B <- B * (hr / pi0) ^ csl[l] # use coarse-grained predictions Good et al 2014?
+        }
+        else {
+          break
+        }
       }
       
-      hr_BGS[i] <- pi0 * one_minus_f
+      hr_list[c] <- pi0 * B
+      neu_pos[c] <- pos
       
-      pos <- pos + 1e+3
+      pos <- pos + 1e+2
+      c <- c + 1
     }
   }
+
+  pos_hr_pairs <- bind_cols(neu_pos, hr_list)
+  # TODO bin
   
   windows <- bind_cols(mus, rs, ss, .name_repair="unique")
   names(windows) <- c("mus", "recs", "dfe")
